<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_utils</name>
  <version>0.15.2</version>
  <description>Utilities for Robot Series</description>

  <maintainer email="support@example.com">goldjunge91</maintainer>

  <license>Apache License 2.0</license>

  <author email="dominik.nwk@gmail.com">Dominik Nowak</author>
  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <author email="rafal.gorecki@husarion.com">Rafal Gorecki</author>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-libgpiod</exec_depend>
  <exec_depend>python3-pyftdi-pip</exec_depend>
  <exec_depend>python3-pyudev</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-sh</exec_depend>
  <exec_depend>usbutils</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
